# speedhockey.online

./: .env.development  .gitignore  Dockerfile  README.md  package-lock.json  package.json  speedhockey.development-key.pem  speedhockey.development.pem  speedhockey_interface.proto  tsconfig.json
backend/: Cargo.toml  build.rs
backend/speedhockey_backend/: build.rs
backend/speedhockey_backend/src/: main.rs
backend/src/: game.rs  interface.proto  interface.ts  main.rs  physics.rs  webtransport.rs
backend/testsite/: index.html  server.py
certificate_serde/: Cargo.toml
certificate_serde/src/: lib.rs
frontend/: .env.development  .env.production  .gitignore  compile_proto.ps1  compile_proto.sh  package-lock.json  package.json  prebuild.ps1  prebuild.sh  tsconfig.json
frontend/src/: client.ts  constants.ts  index.html  index.ts  server.ts
speedhockey-backend/: Cargo.toml
speedhockey-backend/src/: main.rs
speedhockey-backend/testsite/: client.js  index.html  sslserver.py  style.css
speedhockey_backend/: Cargo.toml  build.rs
speedhockey_backend/src/: http.rs  main.rs  physics.rs  webtransport.rs
speedhockey_backend/testsite/: client.js
src/: client.ts  constants.ts  index.html  main.ts  physics.ts  server.ts  types.ts
testsite/: client.js  index.html  server.py
